updated Password Length placeholder text to 8-120 Character limit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>
           <label for="Length">Password length</label>
           <!-- This element has a CSS declaration of `cursor: text` -->
-          <input id="Length" type="text" placeholder="100" />
+          <input id="Length" type="text" placeholder="8-120 Character limit" />
         </p>
         <p>
           <input class="checkbox" id="Uppercase" type="checkbox" />
